# Automated-classification

./: FINAL_REPORT.md  PROJECT_SUMMARY.md  README.md  hr_analytics_utils.py  main.py  pyproject.toml
notebooks/: 1_data_wrangling_eda.ipynb  1_exploration.ipynb  2_feature_engineering.ipynb  3_baseline_modeling.ipynb  4_class_imbalance_handling.ipynb  5_hyperparameter_tuning.ipynb  6_executive_presentation.ipynb  step1_eda.ipynb
results/: baseline_model_comparison.csv  baseline_predictions.csv  class_imbalance_comparison.csv  feature_importance_baseline.csv  feature_info.csv  merged_cleaned_data.csv  phase4_report.txt  phase4_summary.json  target_y.csv  top_models_for_tuning.csv
