[project]
name = "automated-classification"
version = "0.1.0"
description = "Employee turnover analysis for TechNova Partners - Data Science Consultant project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "imbalanced-learn>=0.11.0",
    "shap>=0.42.0",
    "sqlalchemy>=2.0.0",
    "jupyter>=1.0.0",
    "xgboost>=1.7.0",
    "catboost>=1.2.0",
    "plotly>=5.15.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.21",
    "pandas-stubs (==2.3.0.250703)"
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "automated-classification"
version = "0.1.0"
description = "Employee turnover analysis for TechNova Partners"
authors = ["Data Science Consultant <consultant@technova.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
scikit-learn = "^1.3.0"
imbalanced-learn = "^0.11.0"
shap = "^0.42.0"
sqlalchemy = "^2.0.0"
jupyter = "^1.0.0"
xgboost = "^1.7.0"
catboost = "^1.2.0"
plotly = "^5.15.0"
openpyxl = "^3.1.0"
python-pptx = "^0.6.21"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
